feat(job-tracker): switch tailored resumes to the Jake's Resume template
Replaces the custom Charter-font/navy-accent design with the industry
standard 'Jake's Resume' LaTeX layout - ATS-safe, no tables/columns beyond
its own tabular* alignment tricks, widely recognized format. Warmup file
updated to match so the new template's packages are cached at image build
time, not downloaded on the first real request.

Also stopped flattening every skill into one comma-separated line: the
candidate profile now groups skills by category (Language, Framework,
Database, ...) and the prompt is told to keep that grouping in the resume's
Technical Skills section, matching how the template itself expects skills to
be presented.